--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,478 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --blanco: #ffffff;
+  --gris1: #edf2f6;
+  --gris2: #5D5759;
+  --gris3: #1a202d;
+  --negro: #000000;
+  --headingFont: 'Raleway', sans-serif;
+  --textFont: 'Roboto', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*, *:before, *:after {
+  box-sizing: inherit;
 }
+
+html {
+  box-sizing: border-box;
+  height: 100%;
+  font-size: 65%;
+}
+
+body {
+  min-height: 100%;
+  background-color: var(--gris1);
+  font-size: 16px;
+  font-size: 1.6rem;
+  font-family: var(--textFont);
+}
+
+h1, h2 {
+  font-family: var(--headingFont);
+  font-weight: 900;
+  margin: 0 0 4rem 0;
+  text-align: center;
+  color: var(--gris2);
+}
+
+h1 span {
+  font-weight: 400;
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+h2 {
+  font-size: 2.4rem;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+  color: var(--gris2);
+}
+
+/** BOTONES **/
+
+.btn {
+  margin-top: 2rem;
+  font-family: var(--headingFont);
+  padding: 1.5rem;
+  font-size: 1.4;
+  font-weight: 400;
+  border-radius: .5rem;
+  border: none;
+  transition: background-color .3s ease;
+}
+
+.btn:hover {
+  cursor: pointer;
+}
+
+.btn-primario {
+  background-color: #1a83ff;
+  color: #1a83ff;
+  font-size: 30px;
+}
+
+.btn-primario:hover {
+  background: var(--gris1);
+  font-size: 25px;
+}
+
+.btn-secundario {
+  background-color: var(--gris1);
+}
+
+.btn-block {
+  display: block;
+  width: 100%;
+}
+
+.btn-submit:hover {
+  background-color: var(--gris2);
+}
+
+.btn-blank {
+  margin: 0;
+  padding: 0;
+  display: block;
+  background-color: transparent;
+}
+
+@media (min-width: 768px) {
+  .contenedor-app {
+    display: flex;
+    min-height: 100vh;
+  }
+  aside {
+    background-color: var(--blanco);
+    flex: 0 0 300px;
+  }
+  .seccion-principal {
+    flex: 1;
+  }
+}
+
+/* BARRA LATERAL */
+
+aside {
+  padding: 3rem;
+}
+
+.formulario-nuevo-proyecto {
+  margin-top: 6rem;
+  max-width: 100%;
+  margin-left: 1rem;
+  font-size: medium;
+}
+
+.formulario-nuevo-proyecto .input-text  {
+  border-bottom: 1px solid var(--gris2);
+  border-radius: 0;
+  background-color: var(--gris1);
+}
+
+.camposNum{
+  border-bottom: 1px solid var(--gris2);
+  border-radius: 0;
+  padding: 1rem;
+  border: none;
+  flex: 1;
+  width: 100%;
+  border: 1px solid #e1e1e1;
+  padding: 1rem;
+  
+}
+
+.formulario-nuevo-proyecto .input-text::placeholder {
+  color: var(--gris2);
+}
+
+.proyectos {
+  margin-top: 10rem;
+}
+
+.listado-proyectos li {
+  margin-bottom: 2rem;
+}
+
+.listado-proyectos li a {
+  font-size: 1.4rem;
+  color: var(--gris2);
+  line-height: 1.5;
+  font-weight: 300;
+}
+
+.app-header {
+  display: flex;
+  justify-content: space-between;
+  background-color: var(--gris2);
+  padding: 4rem;
+}
+
+.nombre-usuario {
+  color: var(--blanco);
+  font-size: 2.2rem;
+  margin: 0;
+}
+
+.nombre-usuario span {
+  font-weight: 900;
+}
+
+.boton-cerrar{
+
+  margin-left: 70%;
+  width: 300px;
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.nav-principal a {
+  color: var(--blanco);
+  text-decoration: none;
+}
+
+.nav-principal a:first-of-type {
+  margin-right: 2rem;
+}
+
+/** Formulario crear y editar tareas **/
+
+.formulario {
+  background-color: var(--gris3);
+  padding: 4rem;
+}
+
+.formulario form {
+  max-width: 300px;
+  margin: 0 auto;
+}
+
+.contenedor-input {
+  display: flex;
+}
+
+.contenedor-input label {
+  margin-bottom: 1rem;
+  color: var(--blanco);
+}
+
+.input-text {
+  padding: 1rem;
+  border: none;
+  border-radius: .5rem;
+  flex: 1;
+  width: 100%;
+}
+
+.input-date {
+  padding: 1rem;
+  border: none;
+  border-radius: .5rem;
+  flex: 1;
+  width: 10%;
+}
+
+/** TAREAS LISTADO **/
+
+.contenedor-tareas {
+  padding: 4rem;
+}
+
+.listado-tareas {
+  max-width: 100%;
+  margin: 0 auto;
+}
+
+.tarea {
+  display: flex;
+  justify-content: space-between;
+  background-color: var(--blanco);
+  padding: .5rem 2rem;
+  align-items: center;
+  margin-bottom: 1rem;
+  border-radius: .5rem;
+}
+
+.sombra {
+  -webkit-box-shadow: 0px 4px 10px -3px rgba(117, 117, 117, 1);
+  -moz-box-shadow: 0px 4px 10px -3px rgba(117, 117, 117, 1);
+  box-shadow: 0px 4px 10px -3px rgba(117, 117, 117, 1);
+}
+
+.sombra-dark {
+  -webkit-box-shadow: 0px 6px 11px -8px rgba(0, 0, 0, 0.9);
+  -moz-box-shadow: 0px 6px 11px -8px rgba(0, 0, 0, 0.9);
+  box-shadow: 0px 6px 11px -8px rgba(0, 0, 0, 0.9);
+}
+
+.tarea .acciones .btn:first-of-type {
+  margin-right: 1rem;
+}
+
+.tarea p {
+  font-size: 1.6rem;
+  flex: 1;
+  padding-right: 2rem;
+}
+
+.tarea .btn {
+  padding: .8rem;
+  font-size: 1.4rem;
+  border-radius: 0;
+  margin: 0;
+}
+
+.estado {
+  margin-right: 1rem;
+}
+
+.estado button, .mensaje {
+  font-weight: 900;
+  font-family: var(--textFont);
+  font-size: 1rem;
+  padding: .5rem;
+  border-radius: .5rem;
+  cursor: pointer;
+  border: none;
+}
+
+.mensaje {
+  text-align: center;
+  font-size: 1.6rem;
+  border-radius: 0;
+}
+
+.mensaje:hover {
+  cursor: default;
+}
+
+.completo, .correcto {
+  background-color: rgba(154, 252, 154, .3);
+  color: var(--gris3);
+}
+
+.incompleto {
+  background-color: rgba(255, 178, 178, .4);
+  color: var(--gris3);
+}
+
+.error {
+  max-width: 600px;
+  margin: 2rem auto 0 auto;
+  background-color: rgb(170, 0, 0);
+  color: var(--blanco);
+}
+
+.tarea-enter, .proyecto-enter {
+  opacity: 0;
+}
+
+.tarea-enter-active, .proyecto-enter-active {
+  opacity: 1;
+  transition: opacity 200ms;
+}
+
+.tarea-exit, .proyecto-exit {
+  opacity: 1;
+}
+
+.tarea-exit-active, .proyecto-exit-active {
+  opacity: 0;
+  transition: opacity 200ms;
+}
+
+.form-usuario {
+  background-color: #f8f9fa;
+  height: 100vh;
+  min-height: 800px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 40px;
+}
+
+.contenedor-form {
+  padding: 5rem 3rem;
+  max-width: 500px;
+  width: 50%;
+  background-color: var(--blanco);
+  border-radius: 1rem;
+}
+
+.campo-form {
+  display: flex;
+  margin-bottom: 2rem;
+  align-items: center;
+}
+
+.campo-form:last-of-type {
+  margin: 0;
+}
+
+.campo-form label {
+  flex: 0 0 100px;
+  font-family: var(--textFont);
+  font-size: medium;
+}
+
+.campo-form input[type="password"], 
+  .campo-form input[type="email"], 
+  .campo-form input[type="direccion"], .campo-form input[type="text"] {
+  border: 1px solid #e1e1e1;
+  padding: 1rem;
+  flex: 1;
+}
+
+.enlace-cuenta {
+  margin-top: 2rem;
+  display: block;
+  opacity: .7;
+  font-size: medium;
+}
+
+
+
+.alerta-ok {
+  background-color: rgb(109, 211, 109);
+  color: rgb(2, 103, 2);
+}
+
+.alerta-error {
+  background-color: rgb(230, 78, 78);
+  color: var(--blanco);
+}
+
+.App {
+  text-align: center;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.boton-izquierdo {
+  float: right;
+}
+
+/* Style the top navigation bar */
+.topnav {
+  overflow: hidden;
+  color: var(--gris2);
+  font-size: medium;
+}
+
+/* Style the topnav links */
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: #282c34;
+}
+
